// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KonnectorModal adding an account should render the form when controlled by state 1`] = `
<ModalContent>
  <Wrapper
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "doctype": "io.cozy.triggers",
              "id": 784,
            },
          ],
        },
      }
    }
    onLoginSuccess={[Function]}
    onSuccess={[Function]}
  />
</ModalContent>
`;

exports[`KonnectorModal should show a spinner while loading 1`] = `
<Spinner
  className="u-flex u-flex-justify-center u-pv-3"
  color="var(--primaryColor)"
  loadingType=""
  middle={false}
  noMargin={false}
  size="xxlarge"
/>
`;

exports[`KonnectorModal should show an error view 1`] = `
<ModalContent>
  <Infos
    actionButton={
      <DefaultButton
        theme="danger"
      >
        modal.konnector.error.button
      </DefaultButton>
    }
    icon={null}
    isImportant={true}
    text="modal.konnector.error.description"
    title="modal.konnector.error.title"
  />
</ModalContent>
`;

exports[`KonnectorModal should show the configuration view of a single account 1`] = `
<ModalContent>
  <Wrapper
    account={
      Object {
        "doctype": "io.cozy.accounts",
        "id": 123,
      }
    }
    addAccount={[Function]}
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "doctype": "io.cozy.triggers",
              "id": 784,
            },
          ],
        },
      }
    }
    onAccountDeleted={[MockFunction]}
    refetchTrigger={[Function]}
    trigger={
      Object {
        "doctype": "io.cozy.triggers",
        "id": 784,
      }
    }
  />
</ModalContent>
`;

exports[`KonnectorModal should show the list of accounts 1`] = `
<ModalContent>
  <AccountsList
    accounts={
      Array [
        Object {
          "account": Object {
            "doctype": "io.cozy.accounts",
            "id": 123,
          },
          "trigger": Object {
            "doctype": "io.cozy.triggers",
            "id": 784,
          },
        },
        Object {
          "account": Object {
            "doctype": "io.cozy.accounts",
            "id": 123,
          },
          "trigger": Object {
            "doctype": "io.cozy.triggers",
            "id": 872,
          },
        },
      ]
    }
    addAccount={[Function]}
    konnector={
      Object {
        "name": "Mock",
        "slug": "mock",
        "triggers": Object {
          "data": Array [
            Object {
              "doctype": "io.cozy.triggers",
              "id": 784,
            },
            Object {
              "doctype": "io.cozy.triggers",
              "id": 872,
            },
          ],
        },
      }
    }
    onPick={[Function]}
  />
</ModalContent>
`;
